# ripple

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml  ripple.py  ripple.spec
.copr/: Makefile
.local/: Makefile
completions/: ripple.fish
docs/: USAGE.md
packaging/usr/share/completions/bash/: ripple
packaging/usr/share/completions/zsh/: _ripple
src/ripple/: __init__.py  cli.py  constants.py  core.py  ui.py
